--- a/resources/release/manifest.json
+++ b/resources/release/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "chromex-sample",
+  "name": "notify me",
   "version": "0.1.0",
   "browser_action": {
     "default_title": "Show the popup",
     "default_popup": "popup.html",
     "default_icon": {
-      "19": "images/icon19.png",
-      "38": "images/icon38.png"
+      "19": "images/notification.png",
+      "38": "images/notification.png"
     }
   },
   "icons": {
-    "16": "images/icon16.png",
-    "48": "images/icon48.png",
-    "128": "images/icon128.png"
+    "16": "images/notification.png",
+    "48": "images/notification.png",
+    "128": "images/notification.png"
   },
   "content_scripts": [
     {
