--- a/resources/release/manifest.json
+++ b/resources/release/manifest.json
@@ -30,7 +30,8 @@
     "persistent": false
   },
   "permissions": [
-    "storage"
+      "storage",
+      "notifications"
   ],
   "manifest_version": 2
 }
