--- a/resources/unpacked/manifest.json
+++ b/resources/unpacked/manifest.json
@@ -35,7 +35,8 @@
     "persistent": false
   },
   "permissions": [
-    "storage"
+      "storage",
+      "notifications"
   ],
   "manifest_version": 2
 }
