--- a/resources/unpacked/manifest.json
+++ b/resources/unpacked/manifest.json
@@ -34,6 +34,10 @@
     "page": "background.html",
     "persistent": false
   },
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
+  },
   "permissions": [
       "storage",
       "notifications"
